Servicios y capas cliente

--- a/ArqSoftware.CRUD/ArqSoftware.CRUD.Business/ArqSoftware.CRUD.Business.csproj
+++ b/ArqSoftware.CRUD/ArqSoftware.CRUD.Business/ArqSoftware.CRUD.Business.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ArqSoftware.CRUD.Data\ArqSoftware.CRUD.Data.csproj" />
+    <ProjectReference Include="..\ArqSoftware.CRUD.Models\ArqSoftware.CRUD.Models.csproj" />
+  </ItemGroup>
+
 </Project>
