--- a/ArqSoftware.CRUD/ArqSoftware.CRUD.API/ArqSoftware.CRUD.API.csproj
+++ b/ArqSoftware.CRUD/ArqSoftware.CRUD.API/ArqSoftware.CRUD.API.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ArqSoftware.CRUD.Business\ArqSoftware.CRUD.Business.csproj" />
     <ProjectReference Include="..\ArqSoftware.CRUD.Data\ArqSoftware.CRUD.Data.csproj" />
+    <ProjectReference Include="..\ArqSoftware.CRUD.Models\ArqSoftware.CRUD.Models.csproj" />
   </ItemGroup>
 
 </Project>
