--- a/ArqSoftware.CRUD/ArqSoftware.CRUD.API/appsettings.Development.json
+++ b/ArqSoftware.CRUD/ArqSoftware.CRUD.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CrudContext": "data source=localhost;initial catalog=CrudDB;Persist Security Info=True;user id=cruduser;password=123;MultipleActiveResultSets=true"
+    "CrudContext": "data source=np:\\\\.\\pipe\\LOCALDB#88698A8E\\tsql\\query;initial catalog=CrudDB;Persist Security Info=True;user id=cruduser;password=123;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
